--- a/frontend/veganizza-app/src/index.css
+++ b/frontend/veganizza-app/src/index.css
@@ -36,6 +36,8 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
+  max-width: 100%;
+  max-height: auto;
 }
 .main-splash {
   color: white;
@@ -251,14 +253,12 @@ body {
   justify-content: center;
   max-width: 100%;
   margin-bottom: 2rem;
+  margin: 0 10%;
 }
 
 .menu-item {
   display: flex;
-  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  flex-wrap: nowrap;
   border: 3px solid #d0d0d0;
   margin-top: 1rem;
 }
@@ -271,8 +271,9 @@ body {
   margin-left: 0.5rem;
 }
 .menu-item img {
-  max-width: 32%;
-  height: auto;
+  max-width: 28%;
+  max-height: 28%;
+  position: relative;
 }
 
 .menu-item p {
@@ -289,6 +290,36 @@ body {
 
 .btn-menu {
   position: absolute;
+  display: inline-block;
   right: 18px;
   bottom: 2px;
+  max-width: 70%;
+}
+
+.restaurant-container {
+  display: flex;
+  align-items: center;
+  margin-left: 10%;
+  margin-top: 6rem;
+  margin-bottom: 6rem;
+}
+
+.restaurant-container img {
+  margin-left: 1rem;
+  max-width: 50%;
+}
+
+.restaurant-container h2 {
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+  font-size: 3rem;
+  font-weight: 700;
+  margin-right: 1.5rem;
+}
+
+.restaurant-container p {
+  margin-bottom: 0.5rem;
+  font-style: italic;
+  font-size: 1.5rem;
+  font-weight: 300;
 }
