--- a/frontend/veganizza-app/src/index.css
+++ b/frontend/veganizza-app/src/index.css
@@ -11,7 +11,7 @@
 header {
   float: top;
   position: relative;
-  z-index: 10;
+  z-index: 50;
   background-color: black;
   position: fixed;
   width: 100%;
@@ -297,7 +297,10 @@ body {
 
 .menu-body {
   padding: 0;
-  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  flex-flow: column wrap;
+  overflow: auto;
 }
 
 .btn-menu {
@@ -408,7 +411,7 @@ footer {
 }
 
 .footer {
-  padding-bottom: 2rem;
+  padding-bottom: 0rem;
 }
 .footer p {
   margin: 0;
@@ -416,6 +419,9 @@ footer {
   font-size: 0.75rem;
 }
 
+.row {
+  padding-top: 1rem !important;
+}
 .footer img {
   margin: 0.5rem;
 }
@@ -446,4 +452,78 @@ footer {
 
 .menu-text img {
   margin-right: 1rem;
+}
+
+.cart-area p {
+  margin: 0;
+  padding: 0;
+  padding-right: 1rem;
+}
+.cart-area {
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-menu.show {
+  background-color: black;
+}
+
+.qty-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  position: absolute;
+  bottom: 2px;
+  margin-left: 0.5rem;
+}
+
+.qty-container button {
+  background-color: #c72626;
+  color: white;
+  font-weight: 500;
+  border: 0;
+  margin: 1px;
+  margin-top: 1rem;
+}
+
+.qty-container h2 {
+  margin: 0;
+  padding: 0;
+  margin-left: 0.5rem;
+  font-weight: 500;
+  font-size: 0.8rem;
+  margin-top: 1rem;
+}
+
+.cartRow {
+  margin-top: 4rem !important;
+}
+
+.cartRow .form-control {
+  border-radius: 0;
+  padding: 0;
+  text-align: center;
+}
+
+.cartRow i {
+  color: white;
+}
+
+.cartRow button {
+  background-color: #c72626;
+}
+
+.cart-button {
+  border: 1px solid black;
+  margin-right: 0.5rem;
+  padding: 2px 8px 2px 8px;
+}
+
+.login-container {
+  background-color: #ffc5c5;
+  height: 100vh;
+}
+
+header img {
+  cursor: pointer;
 }
