--- a/frontend/veganizza-app/src/index.css
+++ b/frontend/veganizza-app/src/index.css
@@ -8,6 +8,12 @@
   padding: 0.2rem 1rem 0.2rem 1rem;
   position: sticky;
 }
+
+.navbar-container {
+  display: block;
+  padding: 0;
+  margin: 0;
+}
 header {
   float: top;
   position: relative;
@@ -15,23 +21,45 @@ header {
   background-color: black;
   position: fixed;
   width: 100%;
+  height: 5%;
+  min-height: 5%;
   top: 0;
   display: flex;
-  justify-content: space-between;
+  flex-flow: row wrap;
   align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
+  opacity: 0.8;
+  transition: opacity 0.25s ease-in-out;
+  -moz-transition: opacity 0.25s ease-in-out;
+  -webkit-transition: opacity 0.25s ease-in-out;
 }
 
-header img {
-  width: 32px;
-  height: 32px;
-  margin-right: 1rem;
+header:hover {
+  opacity: 1;
+}
+.header-icon-container img {
+  margin-top: 0.5rem;
+  height: 60%;
+}
+
+#header-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 #header-nav a {
   color: white;
   text-decoration: none;
-  margin-right: 52px;
+  margin-left: 1rem;
+  margin-right: 1rem;
+
   font-weight: 500;
   font-size: 1rem;
+}
+
+#header-nav a:hover {
+  color: lightgray;
 }
 
 body {
@@ -70,11 +98,12 @@ body {
   font-size: 4.5rem;
   font-weight: 600;
   margin: 0px 0px 0px 0px;
+  padding-right: 0.75rem;
   padding-bottom: 5px;
   position: relative;
   left: -15px;
-  border-bottom: 5px solid orange;
-  border-right: 5px solid orange;
+  border-bottom: 7.5px solid orange;
+  border-right: 7.5px solid orange;
 }
 
 .splash-text p {
@@ -101,6 +130,11 @@ body {
   color: white;
   font-weight: 400;
   outline: none;
+  opacity: 1;
+}
+
+.button:hover {
+  background-color: #971c1c;
 }
 
 .splash-button {
@@ -112,15 +146,11 @@ body {
   position: relative;
   z-index: 10;
   padding-left: 87px;
-  margin-bottom: 12rem;
+  margin-bottom: 4rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: #ffffff;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 100 60'%3E%3Cg fill-opacity='0.17'%3E%3Crect fill='%23ffffff' width='11' height='11'/%3E%3Crect fill='%23fffcfb' x='10' width='11' height='11'/%3E%3Crect fill='%23fff9f8' y='10' width='11' height='11'/%3E%3Crect fill='%23fff6f4' x='20' width='11' height='11'/%3E%3Crect fill='%23fff3f1' x='10' y='10' width='11' height='11'/%3E%3Crect fill='%23fff0ed' y='20' width='11' height='11'/%3E%3Crect fill='%23ffeee9' x='30' width='11' height='11'/%3E%3Crect fill='%23ffebe6' x='20' y='10' width='11' height='11'/%3E%3Crect fill='%23ffe8e2' x='10' y='20' width='11' height='11'/%3E%3Crect fill='%23ffe5df' y='30' width='11' height='11'/%3E%3Crect fill='%23ffe2db' x='40' width='11' height='11'/%3E%3Crect fill='%23ffdfd8' x='30' y='10' width='11' height='11'/%3E%3Crect fill='%23ffdcd4' x='20' y='20' width='11' height='11'/%3E%3Crect fill='%23ffd9d1' x='10' y='30' width='11' height='11'/%3E%3Crect fill='%23ffd6cd' y='40' width='11' height='11'/%3E%3Crect fill='%23ffd3ca' x='50' width='11' height='11'/%3E%3Crect fill='%23ffd1c6' x='40' y='10' width='11' height='11'/%3E%3Crect fill='%23ffcec3' x='30' y='20' width='11' height='11'/%3E%3Crect fill='%23ffcbbf' x='20' y='30' width='11' height='11'/%3E%3Crect fill='%23ffc8bc' x='10' y='40' width='11' height='11'/%3E%3Crect fill='%23ffc5b9' y='50' width='11' height='11'/%3E%3Crect fill='%23ffc2b5' x='60' width='11' height='11'/%3E%3Crect fill='%23ffbfb2' x='50' y='10' width='11' height='11'/%3E%3Crect fill='%23ffbcae' x='40' y='20' width='11' height='11'/%3E%3Crect fill='%23ffb9ab' x='30' y='30' width='11' height='11'/%3E%3Crect fill='%23ffb6a8' x='20' y='40' width='11' height='11'/%3E%3Crect fill='%23ffb3a4' x='10' y='50' width='11' height='11'/%3E%3Crect fill='%23ffb0a1' x='70' width='11' height='11'/%3E%3Crect fill='%23ffad9d' x='60' y='10' width='11' height='11'/%3E%3Crect fill='%23ffab9a' x='50' y='20' width='11' height='11'/%3E%3Crect fill='%23ffa897' x='40' y='30' width='11' height='11'/%3E%3Crect fill='%23ffa594' x='30' y='40' width='11' height='11'/%3E%3Crect fill='%23ffa290' x='20' y='50' width='11' height='11'/%3E%3Crect fill='%23ff9f8d' x='80' width='11' height='11'/%3E%3Crect fill='%23ff9c8a' x='70' y='10' width='11' height='11'/%3E%3Crect fill='%23ff9986' x='60' y='20' width='11' height='11'/%3E%3Crect fill='%23ff9683' x='50' y='30' width='11' height='11'/%3E%3Crect fill='%23ff9380' x='40' y='40' width='11' height='11'/%3E%3Crect fill='%23ff907d' x='30' y='50' width='11' height='11'/%3E%3Crect fill='%23fe8d79' x='90' width='11' height='11'/%3E%3Crect fill='%23fe8976' x='80' y='10' width='11' height='11'/%3E%3Crect fill='%23fd8673' x='70' y='20' width='11' height='11'/%3E%3Crect fill='%23fc8370' x='60' y='30' width='11' height='11'/%3E%3Crect fill='%23fc806d' x='50' y='40' width='11' height='11'/%3E%3Crect fill='%23fb7d69' x='40' y='50' width='11' height='11'/%3E%3Crect fill='%23fa7a66' x='90' y='10' width='11' height='11'/%3E%3Crect fill='%23fa7763' x='80' y='20' width='11' height='11'/%3E%3Crect fill='%23f97360' x='70' y='30' width='11' height='11'/%3E%3Crect fill='%23f8705d' x='60' y='40' width='11' height='11'/%3E%3Crect fill='%23f76d5a' x='50' y='50' width='11' height='11'/%3E%3Crect fill='%23f66a57' x='90' y='20' width='11' height='11'/%3E%3Crect fill='%23f66653' x='80' y='30' width='11' height='11'/%3E%3Crect fill='%23f56350' x='70' y='40' width='11' height='11'/%3E%3Crect fill='%23f45f4d' x='60' y='50' width='11' height='11'/%3E%3Crect fill='%23f35c4a' x='90' y='30' width='11' height='11'/%3E%3Crect fill='%23f25847' x='80' y='40' width='11' height='11'/%3E%3Crect fill='%23f15544' x='70' y='50' width='11' height='11'/%3E%3Crect fill='%23f05141' x='90' y='40' width='11' height='11'/%3E%3Crect fill='%23ef4d3e' x='80' y='50' width='11' height='11'/%3E%3Crect fill='%23ee493b' x='90' y='50' width='11' height='11'/%3E%3C/g%3E%3C/svg%3E");
-  background-attachment: fixed;
-  background-size: cover;
-  padding-top: 12rem;
+  padding-top: 10rem;
 }
 
 .main-welcome h3 {
@@ -131,7 +161,7 @@ body {
 }
 
 .main-welcome p {
-  color: #7a7a7a;
+  color: gray;
   letter-spacing: 4px;
   text-align: justify;
   text-justify: inter-word;
@@ -224,6 +254,9 @@ body {
   padding-top: 6rem;
   padding-bottom: 6rem;
   background-color: #ffffff;
+  background-image: url('./tile_background.png');
+  background-attachment: fixed;
+  background-size: cover;
 }
 .topSellers {
   text-align: center;
@@ -271,11 +304,34 @@ body {
   margin: 0 10%;
 }
 
+.btn-menu {
+  max-width: 50%;
+  font-size: 1rem;
+  white-space: nowrap;
+  margin-right: 6px;
+}
+
+.menu-screen {
+  background-color: #ffffff;
+  background-image: url('./tile_background.png');
+  background-attachment: fixed;
+  background-size: cover;
+}
+
 .menu-item {
   display: flex;
   align-items: center;
   border: 3px solid #d0d0d0;
-  margin-top: 1rem;
+  background-color: white;
+  height: 100%;
+}
+
+.image-welcome {
+  min-width: 50%;
+}
+
+.image-welcome img {
+  width: 100%;
 }
 
 .menu-item h2 {
@@ -286,8 +342,7 @@ body {
   margin-left: 0.5rem;
 }
 .menu-item img {
-  max-width: 28%;
-  max-height: 28%;
+  width: 33%;
   position: relative;
 }
 
@@ -303,23 +358,19 @@ body {
   display: flex;
   flex-direction: column;
   flex-flow: column wrap;
+  flex-wrap: wrap;
   overflow: auto;
-}
-
-.btn-menu {
-  position: absolute;
-  display: inline-block;
-  right: 18px;
-  bottom: 2px;
-  max-width: 70%;
+  height: 100%;
+  min-width: 67%;
+  justify-content: space-around;
 }
 
 .restaurant-container {
   display: flex;
   align-items: center;
   margin-left: 10%;
-  margin-top: 6rem;
-  margin-bottom: 6rem;
+  padding-top: 6rem;
+  padding-bottom: 6rem;
 }
 
 .restaurant-container img {
@@ -336,15 +387,17 @@ body {
 }
 
 .restaurant-container p {
+  color: #7a7a7a;
+  opacity: 0.9;
   margin-bottom: 0.5rem;
-  font-size: 1.2rem;
+  font-size: 1.75rem;
   font-weight: 300;
 }
 .recycle-main-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 6rem;
+  padding-bottom: 6rem;
 }
 
 .recycle-container {
@@ -353,7 +406,8 @@ body {
   flex-wrap: nowrap;
   align-items: center;
   flex-direction: row;
-  margin-right: 4rem;
+  margin-right: 10%;
+  width: 75%;
 }
 .recycle-left-img {
   display: flex;
@@ -374,9 +428,8 @@ body {
 }
 
 .recycle-text {
-  flex: 0 0 60%;
   position: relative;
-  left: 8rem;
+  margin-left: 10%;
   color: #7a7a7a;
   font-size: 1.5rem;
 }
@@ -396,7 +449,8 @@ body {
   display: flex;
   text-align: center;
   justify-content: center;
-  margin-bottom: 12rem;
+  padding-bottom: 12rem;
+  flex-wrap: wrap;
 }
 
 .blog-item {
@@ -411,11 +465,9 @@ footer {
   width: 100%;
   background-color: black;
   color: white;
-}
-
-.footer {
   padding-bottom: 0rem;
 }
+
 .footer p {
   margin: 0;
   padding: 0;
@@ -424,6 +476,7 @@ footer {
 
 .row {
   padding-top: 1rem !important;
+  margin: 0;
 }
 .footer img {
   margin: 0.5rem;
@@ -458,26 +511,36 @@ footer {
 }
 
 .cart-area p {
-  margin: 0;
+  margin: 0.2rem;
   padding: 0;
   padding-right: 1rem;
 }
 .cart-area {
   display: flex;
   align-items: center;
+
+  height: 100%;
 }
 
 .dropdown-menu.show {
   background-color: black;
 }
 
+.qty-wrapper {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 0.5rem;
+}
+
 .qty-container {
+  width: 50%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  position: absolute;
-  bottom: 2px;
-  margin-left: 0.5rem;
+  margin-left: 0.2rem;
 }
 
 .qty-container button {
@@ -485,17 +548,16 @@ footer {
   color: white;
   font-weight: 500;
   border: 0;
-  margin: 1px;
-  margin-top: 1rem;
+  margin-right: 0.2rem;
 }
 
 .qty-container h2 {
   margin: 0;
   padding: 0;
   margin-left: 0.5rem;
+  margin-right: 0.5rem;
   font-weight: 500;
   font-size: 0.8rem;
-  margin-top: 1rem;
 }
 
 .cartRow {
@@ -618,4 +680,117 @@ header img {
 .order-detail {
   padding: 0.75rem;
   font-weight: 500;
+}
+
+.cart-items-count {
+  position: absolute;
+  left: 40%;
+  top: 15%;
+  z-index: 1;
+  font-weight: 500;
+  font-size: 0.75rem;
+  background-color: #c72626;
+  color: white;
+  border-radius: 50px;
+  padding: 0.24rem 0.65rem 0.24rem 0.65rem;
+  pointer-events: none;
+}
+
+.header-icon-container {
+  position: relative;
+  margin-right: 1rem;
+  height: 100%;
+}
+
+.hover-img {
+  opacity: 1;
+  transition: opacity 0.25s ease-in-out;
+  -moz-transition: opacity 0.25s ease-in-out;
+  -webkit-transition: opacity 0.25s ease-in-out;
+}
+
+.hover-img:hover {
+  opacity: 0.78;
+}
+
+.logo-img {
+  height: 90%;
+  width: auto;
+  padding-left: 0.5rem;
+  border: 3px solid white;
+}
+
+.footer a {
+  text-decoration: none;
+  color: white;
+  display: block;
+  font-size: 0.8rem;
+}
+
+.footer a:hover {
+  color: #d0d0d0;
+}
+
+@media (max-width: 1265px) {
+  body {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  .main-splash {
+    display: none;
+  }
+  .image-welcome {
+    display: none;
+  }
+
+  .text-welcome p {
+    text-align: center;
+  }
+  .main-welcome {
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 8rem;
+  }
+
+  .menu-items {
+    margin: 0;
+  }
+  .btn-menu {
+    margin-right: 0;
+  }
+  .text-welcome {
+    text-align: center;
+  }
+  .recycle-text {
+    font-size: 1.5rem;
+  }
+
+  .recycle-text p {
+    max-width: 95%;
+    font-size: 1.25rem;
+  }
+  .recycle-container {
+    width: 100%;
+  }
+  .hot-items-container .card {
+    min-width: 80%;
+  }
+}
+
+@media (max-width: 1100px) {
+  .text-welcome h3 {
+    font-size: 4rem;
+  }
+
+  .restaurant-container p {
+    font-size: 1.25rem;
+  }
+
+  .recycle-text {
+    font-size: 1rem;
+  }
+
+  .restaurant-container h2 {
+    font-size: 2rem;
+  }
 }
