--- a/frontend/veganizza-app/src/index.css
+++ b/frontend/veganizza-app/src/index.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+.root {
+  min-width: 100%;
+}
+
 .navbar {
   padding: 0.2rem 1rem 0.2rem 1rem;
   position: sticky;
@@ -15,20 +19,18 @@
   margin: 0;
 }
 header {
-  float: top;
   position: relative;
   z-index: 50;
   background-color: black;
   position: fixed;
   width: 100%;
-  height: 5%;
-  min-height: 5%;
+  height: 3rem;
   top: 0;
   display: flex;
   flex-flow: row wrap;
   align-items: center;
   justify-content: space-between;
-  overflow: hidden;
+
   opacity: 0.8;
   transition: opacity 0.25s ease-in-out;
   -moz-transition: opacity 0.25s ease-in-out;
@@ -37,6 +39,12 @@ header {
 
 header:hover {
   opacity: 1;
+}
+
+.header-left {
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 .header-icon-container img {
   margin-top: 0.5rem;
@@ -76,7 +84,7 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
-  max-width: 100%;
+  min-width: 100%;
   max-height: auto;
 }
 .main-splash {
@@ -246,6 +254,10 @@ body {
   flex-wrap: wrap;
 }
 
+.hot-items-container .card {
+  width: 18rem;
+  min-height: 100%;
+}
 .hot-items-container.item {
   padding: 5px;
 }
@@ -254,9 +266,6 @@ body {
   padding-top: 6rem;
   padding-bottom: 6rem;
   background-color: #ffffff;
-  background-image: url('./tile_background.png');
-  background-attachment: fixed;
-  background-size: cover;
 }
 .topSellers {
   text-align: center;
@@ -304,18 +313,15 @@ body {
   margin: 0 10%;
 }
 
+.menu-items .col {
+  margin-bottom: 1rem;
+}
+
 .btn-menu {
   max-width: 50%;
   font-size: 1rem;
   white-space: nowrap;
-  margin-right: 6px;
-}
-
-.menu-screen {
-  background-color: #ffffff;
-  background-image: url('./tile_background.png');
-  background-attachment: fixed;
-  background-size: cover;
+  margin-right: 12px;
 }
 
 .menu-item {
@@ -369,6 +375,7 @@ body {
   display: flex;
   align-items: center;
   margin-left: 10%;
+  margin-right: 10%;
   padding-top: 6rem;
   padding-bottom: 6rem;
 }
@@ -393,6 +400,12 @@ body {
   font-size: 1.75rem;
   font-weight: 300;
 }
+
+.restaurant-text-container {
+  display: flex;
+  align-items: center;
+}
+
 .recycle-main-container {
   display: flex;
   align-items: center;
@@ -438,7 +451,6 @@ body {
   font-weight: 600;
   font-size: 2rem;
   color: #e93f3f;
-  max-width: 50%;
 }
 
 .recycle-text p {
@@ -459,6 +471,7 @@ body {
 
 .blog-item .card {
   border: none;
+  min-height: 100%;
 }
 
 footer {
@@ -515,6 +528,7 @@ footer {
   padding: 0;
   padding-right: 1rem;
 }
+
 .cart-area {
   display: flex;
   align-items: center;
@@ -581,9 +595,12 @@ footer {
 }
 
 .cart-button {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
+.qty-btns {
+  align-items: center;
+}
 .login-container {
   display: flex;
   justify-content: center;
@@ -692,7 +709,7 @@ header img {
   background-color: #c72626;
   color: white;
   border-radius: 50px;
-  padding: 0.24rem 0.65rem 0.24rem 0.65rem;
+  padding: 0.2rem 0.65rem 0.2rem 0.65rem;
   pointer-events: none;
 }
 
@@ -715,7 +732,7 @@ header img {
 
 .logo-img {
   height: 90%;
-  width: auto;
+  min-height: 90%;
   padding-left: 0.5rem;
   border: 3px solid white;
 }
@@ -732,10 +749,6 @@ header img {
 }
 
 @media (max-width: 1265px) {
-  body {
-    margin-left: 10%;
-    margin-right: 10%;
-  }
   .main-splash {
     display: none;
   }
@@ -749,14 +762,15 @@ header img {
   .main-welcome {
     padding-left: 2rem;
     padding-right: 2rem;
-    padding-top: 8rem;
+    padding-top: 6rem;
   }
 
-  .menu-items {
-    margin: 0;
+  .main-welcome h3 {
+    margin-bottom: 0.5rem;
   }
+
   .btn-menu {
-    margin-right: 0;
+    font-size: 0.8rem;
   }
   .text-welcome {
     text-align: center;
@@ -767,13 +781,10 @@ header img {
 
   .recycle-text p {
     max-width: 95%;
-    font-size: 1.25rem;
+    font-size: 1.15rem;
   }
   .recycle-container {
     width: 100%;
-  }
-  .hot-items-container .card {
-    min-width: 80%;
   }
 }
 
@@ -790,7 +801,295 @@ header img {
     font-size: 1rem;
   }
 
+  .recycle-text p {
+    font-size: 1rem;
+  }
+
   .restaurant-container h2 {
     font-size: 2rem;
+  }
+
+  .recycle-text h2 {
+    font-size: 1.5rem;
+  }
+
+  .blog-header {
+    font-size: 2rem !important;
+  }
+}
+
+@media (max-width: 985px) {
+  .hot-items-container .card {
+    width: 14rem;
+  }
+
+  .blog-container .card {
+    width: 14rem !important;
+    margin-bottom: 2rem;
+  }
+
+  .blog-item .card-title {
+    margin-bottom: 0 !important;
+  }
+
+  .restaurant-container h2 {
+    writing-mode: unset;
+  }
+
+  .restaurant-text-container {
+    display: block;
+    margin-left: 2rem;
+  }
+
+  .restaurant-text-container h2 {
+    font-size: 1.5rem;
+  }
+
+  .restaurant-container p {
+    font-size: 1rem;
+  }
+
+  .cart-items-count {
+    padding: 0.15rem 0.55rem 0.15rem 0.55rem;
+  }
+
+  .topSellers img {
+    display: none;
+  }
+  .menu-text img {
+    display: none;
+  }
+  .card-text {
+    padding-top: 8px;
+    padding-bottom: 0;
+  }
+
+  .btn-menu {
+    font-size: 1rem;
+  }
+
+  .cart-h2 {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 790px) {
+  header {
+    opacity: 1 !important;
+  }
+
+  .login-container {
+    margin-top: 10%;
+  }
+
+  .hot-items-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .hot-items-container .card {
+    width: 60vw;
+  }
+  .topSellers h2 {
+    font-size: 2.5rem;
+  }
+  .menu-text h2 {
+    font-size: 2.5rem !important;
+  }
+  .stripe {
+    display: none;
+  }
+
+  .steps-container h3 {
+    display: none;
+  }
+
+  .card-text {
+    font-size: 0.75rem;
+  }
+
+  .bg-stripe {
+    display: none;
+  }
+  .text-welcome h3 {
+    font-size: 2.5rem;
+  }
+
+  .blog-container {
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 8rem;
+  }
+
+  .blog-container .card {
+    width: 26rem !important;
+  }
+
+  .restaurant-container {
+    margin-right: 10%;
+    flex-direction: column;
+  }
+
+  .restaurant-container img {
+    max-width: 100%;
+    margin: 0;
+  }
+
+  .restaurant-text-container {
+    margin-left: 0;
+    margin-top: 1rem;
+  }
+  .restaurant-text-container p {
+    display: inline;
+  }
+
+  .restaurant-container h2 {
+    font-size: 1.5rem;
+  }
+
+  .recycle-main-container {
+    flex-direction: column;
+    margin: 0 10% 0 10%;
+  }
+
+  .recycle-text {
+    margin: 0;
+  }
+
+  .recycle-text p {
+    max-width: 100%;
+    font-size: 1rem;
+  }
+
+  .recycle-container {
+    margin: 0;
+  }
+
+  .promo-carousel {
+    margin: 0 2% 0 2%;
+  }
+
+  .carousel-caption h2 {
+    font-size: 5vw;
+  }
+
+  .checkout-btn {
+    padding: 0.5rem !important;
+  }
+  .footer {
+    display: none;
+  }
+
+  footer p {
+    display: none;
+  }
+
+  footer form {
+    display: none;
+  }
+
+  footer img {
+    display: none;
+  }
+
+  .container {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .cart-button {
+    float: left;
+  }
+}
+
+@media (max-width: 765px) {
+  .cartRow h1 {
+    text-align: center;
+    font-weight: 600 !important;
+    margin-top: 2rem;
+  }
+  .single-order {
+    justify-content: flex-start !important;
+  }
+
+  .orderRow {
+    text-align: center;
+  }
+}
+
+@media (max-width: 730px) {
+  .blog-item {
+    margin: 0;
+  }
+  .blog-container {
+    margin: 0 10% 0 10%;
+  }
+
+  .blog-container .card {
+    width: 70vw !important;
+  }
+
+  .menu-items {
+    margin: 0;
+  }
+
+  .btn-menu {
+    white-space: normal;
+    margin-right: 2px;
+    font-size: 4vw;
+  }
+
+  .text-welcome h3 {
+    font-size: 2rem;
+  }
+  .cart-area p {
+    display: none;
+  }
+}
+
+@media (max-width: 505px) {
+  .carousel-caption h2 {
+    font-size: 3vw;
+  }
+  .text-welcome h3 {
+    font-size: 1.5rem;
+  }
+
+  .text-welcome p {
+    font-size: 0.75rem;
+  }
+
+  .login-container {
+    margin-top: 40%;
+  }
+
+  #header-nav a {
+    font-size: 0.75rem;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .cart-area p {
+    margin: 0.2rem;
+    padding: 0;
+    padding-right: 1rem;
+  }
+}
+
+@media (max-width: 390px) {
+  .order-detail {
+    font-size: 0;
+  }
+
+  .order-detail i {
+    font-size: 0.6rem;
+  }
+}
+@media (max-width: 375px) {
+  .header-icon-container img {
+    height: 50%;
+  }
+  .logo-img {
+    height: 50%;
+    min-height: 0;
   }
 }
