--- a/frontend/veganizza-app/src/index.css
+++ b/frontend/veganizza-app/src/index.css
@@ -3,16 +3,13 @@
 *::after {
   box-sizing: border-box;
 }
-
 .root {
   min-width: 100%;
 }
-
 .navbar {
   padding: 0.2rem 1rem 0.2rem 1rem;
   position: sticky;
 }
-
 .navbar-container {
   display: block;
   padding: 0;
@@ -30,17 +27,14 @@ header {
   flex-flow: row wrap;
   align-items: center;
   justify-content: space-between;
-
   opacity: 0.8;
   transition: opacity 0.25s ease-in-out;
   -moz-transition: opacity 0.25s ease-in-out;
   -webkit-transition: opacity 0.25s ease-in-out;
 }
-
 header:hover {
   opacity: 1;
 }
-
 .header-left {
   display: flex;
   align-items: center;
@@ -50,7 +44,6 @@ header:hover {
   margin-top: 0.5rem;
   height: 60%;
 }
-
 #header-nav {
   display: flex;
   align-items: center;
@@ -61,15 +54,12 @@ header:hover {
   text-decoration: none;
   margin-left: 1rem;
   margin-right: 1rem;
-
   font-weight: 500;
   font-size: 1rem;
 }
-
 #header-nav a:hover {
   color: lightgray;
 }
-
 body {
   margin: 0;
   padding: 0;
@@ -77,7 +67,6 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
 }
-
 .main-screen {
   position: absolute;
   top: 0;
@@ -92,7 +81,6 @@ body {
   height: 100%;
   width: 100%;
 }
-
 .splash-text {
   z-index: 1;
   color: white;
@@ -101,7 +89,6 @@ body {
   top: 55%;
   display: inline-block;
 }
-
 .splash-text h3 {
   font-size: 4.5rem;
   font-weight: 600;
@@ -113,14 +100,12 @@ body {
   border-bottom: 7.5px solid orange;
   border-right: 7.5px solid orange;
 }
-
 .splash-text p {
   font-size: 1.8rem;
   font-weight: 500;
   text-align: left;
   margin: 0;
 }
-
 .main-image {
   width: 100%;
   height: 100%;
@@ -129,7 +114,9 @@ body {
   object-fit: cover;
   transform: scale(1, 1);
 }
-
+button:active {
+  transform: translateY(1px);
+}
 .button {
   background-color: #c72626;
   position: relative;
@@ -140,16 +127,13 @@ body {
   outline: none;
   opacity: 1;
 }
-
 .button:hover {
   background-color: #971c1c;
 }
-
 .splash-button {
   right: 5px;
   top: 10px;
 }
-
 .main-welcome {
   position: relative;
   z-index: 10;
@@ -160,14 +144,12 @@ body {
   justify-content: space-between;
   padding-top: 10rem;
 }
-
 .main-welcome h3 {
   font-size: 5.5rem;
   font-weight: 500;
   padding: 0;
   margin: 0;
 }
-
 .main-welcome p {
   color: gray;
   letter-spacing: 4px;
@@ -176,7 +158,6 @@ body {
   font-size: 1rem;
   font-weight: 500;
 }
-
 .steps-container {
   text-align: center;
   font-size: 2.6rem;
@@ -185,7 +166,6 @@ body {
 .steps-container h3 {
   font-weight: 600;
 }
-
 .stripe {
   display: flex;
   flex-wrap: wrap;
@@ -193,13 +173,11 @@ body {
   align-items: center;
   font-size: 0.8rem;
 }
-
 .stripe img {
   margin-top: 20px;
   margin-left: 30px;
   margin-right: 30px;
 }
-
 .bg-stripe {
   position: relative;
   z-index: 1;
@@ -210,7 +188,6 @@ body {
   content: none;
   background-color: #ffc5c5;
 }
-
 .promo-carousel img {
   max-width: 100%;
   max-height: 100%;
@@ -224,7 +201,6 @@ body {
   top: 65%;
   left: 4%;
 }
-
 .carousel-caption h2 {
   display: inline;
   background-color: white;
@@ -233,12 +209,10 @@ body {
   font-weight: 800;
   padding: 0px 25px;
 }
-
 .carousel-control-prev,
 .carousel-control-next {
   z-index: 10;
 }
-
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
   background-color: black;
@@ -246,14 +220,12 @@ body {
   position: relative;
   font-size: 50px;
 }
-
 .hot-items-container {
   display: flex;
   justify-content: center;
   gap: 20px;
   flex-wrap: wrap;
 }
-
 .hot-items-container .card {
   width: 18rem;
   min-height: 100%;
@@ -261,7 +233,6 @@ body {
 .hot-items-container.item {
   padding: 5px;
 }
-
 .topSellersContainer {
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -274,28 +245,23 @@ body {
   justify-content: center;
   align-items: center;
 }
-
 .topSellers h2 {
   display: inline;
   font-weight: 700;
   font-size: 3rem;
 }
-
 .card-body {
   padding: 5px 10px;
 }
-
 .card-text {
   padding-top: 8px;
   padding-bottom: 30px;
 }
-
 .card-img-top {
   width: 100%;
   height: 95%;
   margin-bottom: 15px;
 }
-
 .btn-test {
   margin-bottom: 10px;
   margin-left: 0.5rem;
@@ -312,18 +278,15 @@ body {
   margin-bottom: 2rem;
   margin: 0 10%;
 }
-
 .menu-items .col {
   margin-bottom: 1rem;
 }
-
 .btn-menu {
   max-width: 50%;
   font-size: 1rem;
   white-space: nowrap;
   margin-right: 12px;
 }
-
 .menu-item {
   display: flex;
   align-items: center;
@@ -331,15 +294,12 @@ body {
   background-color: white;
   height: 100%;
 }
-
 .image-welcome {
   min-width: 50%;
 }
-
 .image-welcome img {
   width: 100%;
 }
-
 .menu-item h2 {
   margin: 0;
   padding-top: 10px;
@@ -351,14 +311,12 @@ body {
   width: 33%;
   position: relative;
 }
-
 .menu-item p {
   margin: 0;
   font-size: 0.8rem;
   font-style: italic;
   margin-left: 0.5rem;
 }
-
 .menu-body {
   padding: 0;
   display: flex;
@@ -370,7 +328,6 @@ body {
   min-width: 67%;
   justify-content: space-around;
 }
-
 .post-container {
   display: flex;
   align-items: center;
@@ -380,16 +337,13 @@ body {
   padding-bottom: 6rem;
   justify-content: center;
 }
-
 .post-container img {
   max-width: 80%;
 }
-
 .post-container h3 {
   font-size: 3rem;
   font-weight: 600;
 }
-
 .post-container p {
   font-size: 1.2rem;
 }
@@ -401,12 +355,10 @@ body {
   padding-top: 6rem;
   padding-bottom: 6rem;
 }
-
 .restaurant-container img {
   margin-left: 1rem;
   max-width: 50%;
 }
-
 .restaurant-container h2 {
   writing-mode: vertical-rl;
   text-orientation: mixed;
@@ -414,7 +366,6 @@ body {
   font-weight: 700;
   margin-right: 1.5rem;
 }
-
 .restaurant-container p {
   color: #7a7a7a;
   opacity: 0.9;
@@ -422,19 +373,16 @@ body {
   font-size: 1.75rem;
   font-weight: 300;
 }
-
 .restaurant-text-container {
   display: flex;
   align-items: center;
 }
-
 .recycle-main-container {
   display: flex;
   align-items: center;
   justify-content: center;
   padding-bottom: 6rem;
 }
-
 .recycle-container {
   display: flex;
   justify-content: start;
@@ -449,36 +397,29 @@ body {
   flex-direction: column;
   max-width: 33.3%;
 }
-
 .recycle-left-img img {
   max-width: 100%;
 }
-
 .recycle-right-img {
   max-width: 70%;
 }
-
 .recycle-right-img img {
   max-width: 100%;
 }
-
 .recycle-text {
   position: relative;
   margin-left: 10%;
   color: #7a7a7a;
   font-size: 1.5rem;
 }
-
 .recycle-text h2 {
   font-weight: 600;
   font-size: 2rem;
   color: #e93f3f;
 }
-
 .recycle-text p {
   max-width: 80%;
 }
-
 .blog-container {
   display: flex;
   text-align: center;
@@ -486,29 +427,24 @@ body {
   padding-bottom: 12rem;
   flex-wrap: wrap;
 }
-
 .blog-item {
   margin: 0 1rem;
 }
-
 .blog-item .card {
   border: none;
   min-height: 100%;
 }
-
 footer {
   width: 100%;
   background-color: black;
   color: white;
   padding-bottom: 0rem;
 }
-
 .footer p {
   margin: 0;
   padding: 0;
   font-size: 0.75rem;
 }
-
 .row {
   padding-top: 1rem !important;
   margin: 0;
@@ -516,15 +452,12 @@ footer {
 .footer img {
   margin: 0.5rem;
 }
-
 .form-container {
   display: flex;
 }
-
 .row {
   padding-top: 2rem;
 }
-
 .payment-logos {
   width: 100%;
   display: flex;
@@ -534,34 +467,27 @@ footer {
   margin-right: 0.5rem;
   margin-bottom: 1rem;
 }
-
 .menu-text {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 .menu-text img {
   margin-right: 1rem;
 }
-
 .cart-area p {
   margin: 0.2rem;
   padding: 0;
   padding-right: 1rem;
 }
-
 .cart-area {
   display: flex;
   align-items: center;
-
   height: 100%;
 }
-
 .dropdown-menu.show {
   background-color: black;
 }
-
 .qty-wrapper {
   overflow: hidden;
   display: flex;
@@ -569,7 +495,6 @@ footer {
   justify-content: space-between;
   margin-left: 0.5rem;
 }
-
 .qty-container {
   width: 50%;
   height: 100%;
@@ -578,7 +503,6 @@ footer {
   justify-content: flex-start;
   margin-left: 0.2rem;
 }
-
 .qty-container button {
   background-color: #c72626;
   color: white;
@@ -586,7 +510,6 @@ footer {
   border: 0;
   margin-right: 0.2rem;
 }
-
 .qty-container h2 {
   margin: 0;
   padding: 0;
@@ -595,31 +518,25 @@ footer {
   font-weight: 500;
   font-size: 0.8rem;
 }
-
 .cartRow {
   margin-top: 4rem !important;
 }
-
 .cartRow .form-control {
   border-radius: 0;
   padding: 0;
   text-align: center;
 }
-
 .cartRow i {
   color: black;
 }
-
 .cart-button {
   margin-right: 0.5rem;
   padding: 6px 12px 6px 12px;
   background-color: black;
 }
-
 .cart-button {
   font-size: 1rem;
 }
-
 .qty-btns {
   align-items: center;
 }
@@ -628,8 +545,8 @@ footer {
   justify-content: center;
   align-items: center;
   height: 50vh;
+  margin-top: 2rem;
 }
-
 .login-container a {
   color: #c72626;
 }
@@ -637,90 +554,72 @@ footer {
   border-radius: 0;
   border: 1px solid gray !important;
 }
-
 header img {
   cursor: pointer;
 }
-
 .cartRow a {
   text-decoration: none;
 }
-
 .cartRow .card {
   margin-bottom: 2rem;
 }
-
 .cartRow h3 {
   font-weight: 500;
   color: #c72626;
   margin: 1rem;
 }
-
 .order-col {
   text-align: center;
 }
 .order-col .list-group-item {
   padding: 0.25rem 0.5rem 0.25rem 0.5rem;
 }
-
 .order-header {
   color: #c72626;
 }
-
 .single-order .card {
   margin-bottom: 0;
 }
-
 .single-order .alert {
   margin-bottom: 0;
   border-radius: 0;
   padding-left: 0.5rem;
 }
-
 .animation {
   margin: 0;
   padding: 0;
 }
-
 .my-order-container {
   margin-top: 4rem;
 }
-
 .my-order-container h3 {
   font-weight: 600;
 }
 .table-sm th {
   color: #c72626;
 }
-
 .id-container {
   cursor: pointer;
 }
-
 .id-container:hover {
   color: #c72626;
 }
-
 .cartScreen .list-group-item {
   border: none;
 }
-
 .table-sm {
   text-align: center;
 }
-
 .table-sm td {
   vertical-align: middle;
 }
 .id-container {
   font-weight: 500;
 }
-
 .order-detail {
   padding: 0.75rem;
   font-weight: 500;
 }
-
 .cart-items-count {
   position: absolute;
   left: 40%;
@@ -734,42 +633,35 @@ header img {
   padding: 0.2rem 0.65rem 0.2rem 0.65rem;
   pointer-events: none;
 }
-
 .header-icon-container {
   position: relative;
   margin-right: 1rem;
   height: 100%;
 }
-
 .hover-img {
   opacity: 1;
   transition: opacity 0.25s ease-in-out;
   -moz-transition: opacity 0.25s ease-in-out;
   -webkit-transition: opacity 0.25s ease-in-out;
 }
-
 .hover-img:hover {
   opacity: 0.78;
 }
-
 .logo-img {
   height: 90%;
   min-height: 90%;
   padding-left: 0.5rem;
   border: 3px solid white;
 }
-
 .footer a {
   text-decoration: none;
   color: white;
   display: block;
   font-size: 0.8rem;
 }
-
 .footer a:hover {
   color: #d0d0d0;
 }
-
 @media (max-width: 1265px) {
   .main-splash {
     display: none;
@@ -777,7 +669,6 @@ header img {
   .image-welcome {
     display: none;
   }
-
   .text-welcome p {
     text-align: center;
   }
@@ -786,11 +677,9 @@ header img {
     padding-right: 2rem;
     padding-top: 6rem;
   }
-
   .main-welcome h3 {
     margin-bottom: 0.5rem;
   }
-
   .btn-menu {
     font-size: 0.8rem;
   }
@@ -800,7 +689,6 @@ header img {
   .recycle-text {
     font-size: 1.5rem;
   }
-
   .recycle-text p {
     max-width: 95%;
     font-size: 1.15rem;
@@ -809,72 +697,56 @@ header img {
     width: 100%;
   }
 }
-
 @media (max-width: 1100px) {
   .text-welcome h3 {
     font-size: 4rem;
   }
-
   .restaurant-container p {
     font-size: 1.25rem;
   }
-
   .recycle-text {
     font-size: 1rem;
   }
-
   .recycle-text p {
     font-size: 1rem;
   }
-
   .restaurant-container h2 {
     font-size: 2rem;
   }
-
   .recycle-text h2 {
     font-size: 1.5rem;
   }
-
   .blog-header {
     font-size: 2rem !important;
   }
 }
-
 @media (max-width: 985px) {
   .hot-items-container .card {
     width: 14rem;
   }
-
   .blog-container .card {
     width: 14rem !important;
     margin-bottom: 2rem;
   }
-
   .blog-item .card-title {
     margin-bottom: 0 !important;
   }
-
   .restaurant-container h2 {
     writing-mode: unset;
   }
-
   .restaurant-text-container {
     display: block;
     margin-left: 2rem;
   }
-
   .restaurant-text-container h2 {
     font-size: 1.5rem;
   }
-
   .restaurant-container p {
     font-size: 1rem;
   }
-
   .cart-items-count {
     padding: 0.15rem 0.55rem 0.15rem 0.55rem;
   }
-
   .topSellers img {
     display: none;
   }
@@ -885,15 +757,12 @@ header img {
     padding-top: 8px;
     padding-bottom: 0;
   }
-
   .btn-menu {
     font-size: 1rem;
   }
-
   .cart-h2 {
     font-size: 1rem;
   }
-
   .post-container h3 {
     margin-top: 3rem;
     font-size: 2.2rem;
@@ -905,21 +774,17 @@ header img {
     max-width: 100%;
   }
 }
-
 @media (max-width: 790px) {
   header {
     opacity: 1 !important;
   }
-
   .login-container {
     margin-top: 10%;
   }
-
   .hot-items-container {
     flex-direction: column;
     align-items: center;
   }
-
   .hot-items-container .card {
     width: 60vw;
   }
@@ -932,42 +797,34 @@ header img {
   .stripe {
     display: none;
   }
-
   .steps-container h3 {
     display: none;
   }
-
   .card-text {
     font-size: 0.75rem;
   }
-
   .bg-stripe {
     display: none;
   }
   .text-welcome h3 {
     font-size: 2.5rem;
   }
-
   .blog-container {
     flex-direction: column;
     align-items: center;
     padding-bottom: 8rem;
   }
-
   .blog-container .card {
     width: 26rem !important;
   }
-
   .restaurant-container {
     margin-right: 10%;
     flex-direction: column;
   }
-
   .restaurant-container img {
     max-width: 100%;
     margin: 0;
   }
-
   .restaurant-text-container {
     margin-left: 0;
     margin-top: 1rem;
@@ -975,66 +832,52 @@ header img {
   .restaurant-text-container p {
     display: inline;
   }
-
   .restaurant-container h2 {
     font-size: 1.5rem;
   }
-
   .recycle-main-container {
     flex-direction: column;
     margin: 0 10% 0 10%;
   }
-
   .recycle-text {
     margin: 0;
   }
-
   .recycle-text p {
     max-width: 100%;
     font-size: 1rem;
   }
-
   .recycle-container {
     margin: 0;
   }
-
   .promo-carousel {
     margin: 0 2% 0 2%;
   }
-
   .carousel-caption h2 {
     font-size: 5vw;
   }
-
   .checkout-btn {
     padding: 0.5rem !important;
   }
   .footer {
     display: none;
   }
-
   footer p {
     display: none;
   }
-
   footer form {
     display: none;
   }
-
   footer img {
     display: none;
   }
-
   .container {
     margin-right: 0;
     margin-left: 0;
   }
-
   .cart-button {
     float: left;
   }
 }
-
 @media (max-width: 765px) {
   .cartRow h1 {
     text-align: center;
@@ -1044,12 +887,10 @@ header img {
   .single-order {
     justify-content: flex-start !important;
   }
-
   .orderRow {
     text-align: center;
   }
 }
-
 @media (max-width: 730px) {
   .blog-item {
     margin: 0;
@@ -1057,21 +898,17 @@ header img {
   .blog-container {
     margin: 0 10% 0 10%;
   }
-
   .blog-container .card {
     width: 70vw !important;
   }
-
   .menu-items {
     margin: 0;
   }
-
   .btn-menu {
     white-space: normal;
     margin-right: 2px;
     font-size: 4vw;
   }
-
   .text-welcome h3 {
     font-size: 2rem;
   }
@@ -1079,7 +916,6 @@ header img {
     display: none;
   }
 }
-
 @media (max-width: 505px) {
   .carousel-caption h2 {
     font-size: 3vw;
@@ -1087,15 +923,12 @@ header img {
   .text-welcome h3 {
     font-size: 1.5rem;
   }
-
   .text-welcome p {
     font-size: 0.75rem;
   }
-
   .login-container {
     margin-top: 40%;
   }
-
   #header-nav a {
     font-size: 0.75rem;
     margin-left: 0;
@@ -1107,12 +940,10 @@ header img {
     padding-right: 1rem;
   }
 }
-
 @media (max-width: 390px) {
   .order-detail {
     font-size: 0;
   }
-
   .order-detail i {
     font-size: 0.6rem;
   }
