Bug fixes to main screen

--- a/frontend/veganizza-app/src/index.css
+++ b/frontend/veganizza-app/src/index.css
@@ -127,9 +127,7 @@ button:active {
   outline: none;
   opacity: 1;
 }
-.button:hover {
-  background-color: #971c1c;
-}
+
 .splash-button {
   right: 5px;
   top: 10px;
@@ -203,7 +201,7 @@ button:active {
 }
 .carousel-caption h2 {
   display: inline;
-  background-color: white;
+  background-color: #e9ca3f;
   color: black;
   font-size: 3rem;
   font-weight: 800;
@@ -216,9 +214,8 @@ button:active {
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
   background-color: black;
-  padding: 22px;
+  padding: 20px;
   position: relative;
-  font-size: 50px;
 }
 .hot-items-container {
   display: flex;
@@ -282,10 +279,8 @@ button:active {
   margin-bottom: 1rem;
 }
 .btn-menu {
-  max-width: 50%;
-  font-size: 1rem;
   white-space: nowrap;
-  margin-right: 0.3rem;
+  margin-right: 0.1rem;
 }
 .menu-item {
   display: flex;
@@ -637,8 +632,8 @@ header img {
   font-size: 0.75rem;
   background-color: #c72626;
   color: white;
-  border-radius: 50px;
-  padding: 0.3rem 0.6rem 0.3rem 0.6rem;
+  border-radius: 100px;
+  padding: 0.1rem 0.4rem 0.1rem 0.4rem;
   pointer-events: none;
 }
 .header-icon-container {
@@ -670,6 +665,7 @@ header img {
 .footer a:hover {
   color: #d0d0d0;
 }
+
 @media (max-width: 1265px) {
   .main-splash {
     display: none;
@@ -688,9 +684,12 @@ header img {
   .main-welcome h3 {
     margin-bottom: 0.5rem;
   }
-  .btn-menu {
-    font-size: 0.8rem;
+  .header-icon-container {
+    position: relative;
+    margin-right: 1rem;
+    height: 100%;
   }
+
   .text-welcome {
     text-align: center;
   }
@@ -703,6 +702,10 @@ header img {
   }
   .recycle-container {
     width: 100%;
+  }
+
+  .btn-menu {
+    font-size: 0.9rem;
   }
 }
 @media (max-width: 1100px) {
@@ -765,9 +768,7 @@ header img {
     padding-top: 8px;
     padding-bottom: 0;
   }
-  .btn-menu {
-    font-size: 1rem;
-  }
+
   .cart-h2 {
     font-size: 1rem;
   }
@@ -780,6 +781,9 @@ header img {
   }
   .post-container img {
     max-width: 100%;
+  }
+  .carousel-caption h2 {
+    font-size: 5vw;
   }
 }
 @media (max-width: 790px) {
@@ -878,6 +882,14 @@ header img {
   footer img {
     display: none;
   }
+  footer .row {
+    padding-top: 0.2rem !important;
+    padding-bottom: 0.2rem;
+  }
+
+  .payment-logos {
+    justify-content: center;
+  }
   .container {
     margin-right: 0;
     margin-left: 0;
@@ -915,7 +927,7 @@ header img {
   .btn-menu {
     white-space: normal;
     margin-right: 2px;
-    font-size: 2.2vw;
+
     margin-right: 0.2rem;
   }
   .text-welcome h3 {
@@ -949,7 +961,11 @@ header img {
     padding-right: 1rem;
   }
 }
-@media (max-width: 390px) {
+@media (max-width: 400px) {
+  .logo-img {
+    height: 50%;
+    min-height: 0;
+  }
   .order-detail {
     font-size: 0;
   }
@@ -958,11 +974,10 @@ header img {
   }
 }
 @media (max-width: 375px) {
-  .header-icon-container img {
-    height: 50%;
+  .carousel-caption {
+    top: 30%;
   }
-  .logo-img {
-    height: 50%;
-    min-height: 0;
+  .carousel-caption h2 {
+    font-size: 0.5rem;
   }
 }
